syntax = "proto3";

option go_package = "main/internal/microservices/images/proto";
import "google/protobuf/empty.proto";

// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative image.proto

service ImageService {
  rpc UploadAvatar(Image) returns (ImageUrl) {}
  rpc UploadPlaylistImage(Image) returns (ImageUrl) {}
  rpc RemoveImage(ImageUrl) returns (google.protobuf.Empty) {}
}

message ImageUrl {
  string Url = 1;
}

message Image {
  bytes Data = 1;
  uint64 Size = 2;
}
