syntax = "proto3";

option go_package = "main/internal/microservices/playlist/proto";
import "track.proto";
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative -I../proto -I../../track/proto  playlist.proto
service PlaylistService {
  rpc Create (Base) returns (Status) {}
  rpc Get (PlaylistId) returns (Response) {}
  rpc GetUserPlaylists (UserId) returns (PlaylistsBase) {}
  rpc AddTrack (PlaylistToTrackId) returns (Status) {}
  rpc UpdatePreview (PlaylistIdToImageUrl) returns (Status) {}
  rpc DeleteById (PlaylistId) returns (Status) {}
}

message PlaylistId {
  uint64 id = 1;
}

message PlaylistToTrackId {
  uint64 playlistId = 1;
  uint64 trackId = 2;
}

message UserId {
  string id = 1;
}

message PlaylistIdToImageUrl {
  uint64 id = 1;
  string image = 2;
}

message Base {
  uint64 Id = 1;
  string Name = 2;
  string CreatorId = 3;
  string Preview = 4;
}

message Response {
  uint64 Id = 1;
  string Name = 2;
  string Preview = 3;
  uint64 ArtistId = 4;
  string ArtistName = 5;
  string CreatorId = 6;
  TracksResponse Tracks = 7;
}

message PlaylistsResponse {
  repeated Response playlists = 1;
}

message PlaylistsBase {
  repeated Base playlists = 1;
}
